--- a/ExploringClassifiers.ipynb
+++ b/ExploringClassifiers.ipynb
@@ -18,10 +18,10 @@
     "import numpy as np \n",
     "\n",
     "from sklearn.preprocessing import scale\n",
-    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.linear_model import LinearRegression, LogisticRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor"
    ]
   },
   {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "<AxesSubplot:xlabel='K'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,6 +557,75 @@
    "source": [
     "plot1 = results.plot.line(x='K', y ='Training R2')\n",
     "results.plot.line(x='K', y = 'Testing R2', ax =plot1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression Train Score 0.669\n",
+      "LinearRegression Test Score -2.1043021595499917e+22\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression(n_jobs=4)\n",
+    "lr.fit(X_train,y_train)\n",
+    "print('LinearRegression Train Score', lr.score(X_train,y_train).round(3))\n",
+    "print('LinearRegression Test Score', lr.score(X_test,y_test).round(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = {'max_depth': np.arange(1,20)}\n",
+    "Tree = DecisionTreeRegressor()\n",
+    "TreeCV = GridSearchCV(Tree, param_grid = grid, return_train_score = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best depth: {'max_depth': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "TreeCV.fit(X_train,y_train)\n",
+    "print('Best depth:', TreeCV.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree Train Score 0.606\n",
+      "Tree Test Score 0.388\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Tree Train Score',TreeCV.score(X_train,y_train).round(3))\n",
+    "print('Tree Test Score',TreeCV.score(X_test,y_test).round(3))"
    ]
   }
  ],
