Updated to include the confusion matrix

--- a/DecisionTreeDemo.ipynb
+++ b/DecisionTreeDemo.ipynb
@@ -4909,8 +4909,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b18587d4-3b3e-45db-8434-8ce922cedc05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[149  12]\n",
+      " [ 87  74]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.me\n",
+    "\n",
+    "y_true = y_test\n",
+    "y_pred = best_tree.predict(X_test)\n",
+    "\n",
+    "cm = confusion_matrix(y_true, y_pred, labels=['excellent', 'very good'])\n",
+    "\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90960d94-5f82-4a6e-af5e-e2e1a3140494",
    "metadata": {},
    "outputs": [],
    "source": []
